--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^4.21.0",
-    "express-session": "^1.18.0"
+    "express-session": "^1.18.0",
+    "mssql": "^11.0.1",
+    "tedious": "^18.6.1"
   }
 }
