--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     }
   ],
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "connect-flash": "^0.1.1",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
     "express-session": "^1.18.0",
+    "express-validator": "^7.2.0",
     "mssql": "^11.0.1",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "tedious": "^18.6.1"
   }
 }
